fixed Booking display on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,6 +348,10 @@ p.review{
 	border-bottom: 3px solid #000;
 	cursor: pointer;
 }
+
+.booking_object {
+	display: flex;
+}
 i.book1 {
 	width:40px;
 	height:35px;
@@ -1992,6 +1996,10 @@ font-weight: 700;
 @media screen and (max-width: 640px) {
 	form {
 		display: block;
+	}
+
+	.booking_object {
+		flex-direction: column;
 	}
 	
 	p.claim {
